fix: prevent horizontal scroll

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 :root {
     /* Color palette */
     --color-cream: #fdfaf5;
@@ -37,6 +41,7 @@
 /* Base styles */
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -47,6 +52,7 @@ body {
     letter-spacing: var(--ls-body);
     background-color: var(--color-cream);
     color: var(--color-text);
+    overflow-x: hidden;
 }
 
 h1,
